--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
         }
 
         async function approveLoan() {
-            const loan_id = ocument.getElementById("loan-id-input").value;
+            const loan_id = document.getElementById("loan-id-input").value;
             const manualLoanApproval = document.getElementById("manual-loan-approval").checked;
             const manual_decision_reason = document.getElementById("manual_decision_reason").value;
 
